# GestureRobotProject

./: .gitignore  2.13.0  CMakeLists.txt  Downloads - Shortcut.lnk  README.md  command_log.csv  dashboard.py  dataset_prep.py  evaluate_system.py  evaluation_results.json  gesture_classifier.py  gesture_sequencer.py  nav_evaluate.py  nav_plot_results.py  package.xml  realtime_inference.py  requirements.txt  ros_bridge.py  ros_gesture_node.py  test_gesture_classifier.py  train_model.py  verify_setup.py
gesture_control_ros/: CMakeLists.txt  package.xml  setup.py
gesture_control_ros/launch/: gazebo_turtlebot3_demo.launch  gazebo_turtlebot3_house_demo.launch  gesture_control.launch
gesture_control_ros/scripts/: gesture_publisher.py  nav_evaluate.py  nav_plot_results.py  robot_controller.py  session_analyze.py  session_recorder.py  tcp_command_bridge.py
gesture_control_ros/src/gesture_control_ros/: gesture_classifier.py
launch/: gesture_control.launch
train_env/: pyvenv.cfg
train_env/Scripts/: activate  activate.bat
