<?xml version="1.0"?>
<package format="2">
  <name>honours_project_ros</name>
  <version>1.0.0</version>
  <description>
    AI-Powered Gesture Control for Robot Navigation
    BA-25-1058 | Mmesoma Kenneth (202307951)
  </description>

  <maintainer email="winnie@student.herts.ac.uk">Mmesoma Kenneth</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
  </export>
</package>
